# llvm-to-cairo

./: .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  lint-staged.config.mjs  main  package.json  package.nix  workspace.nix
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  performance.md  task.md
.github/workflows/: ci.yml  docs.yml  rust.yml
.husky/: pre-commit
crates/: README.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/compiler/: Cargo.toml  README.md
crates/compiler/input/: add.ll
crates/compiler/src/: compile.rs  constant.rs  lib.rs  polyfill.rs
crates/compiler/src/codegen/: data.rs  mod.rs  output.rs
crates/compiler/src/compile/: context.rs  mod.rs
crates/compiler/src/compile/pass/: data.rs  mod.rs
crates/compiler/src/compile/pass/analysis/: module_map.rs
crates/compiler/src/compile/source/: mod.rs  module.rs
crates/compiler/src/context/: mod.rs  module.rs
crates/compiler/src/llvm/: data_layout.rs  mod.rs  special_intrinsics.rs  typesystem.rs
crates/compiler/src/pass/: data.rs  mod.rs
crates/compiler/src/pass/analysis/: mod.rs  module_map.rs
crates/compiler/src/polyfill/: mappings.rs  mod.rs
crates/compiler/src/source/: mod.rs  module.rs
crates/driver/: Cargo.toml  README.md
crates/error/: Cargo.toml  README.md
crates/error/src/: compile.rs  lib.rs
crates/flir/: Cargo.toml  README.md
crates/flir/src/: lib.rs
crates/flo/: Cargo.toml  README.md
crates/flo/src/: flo.rs  intern.rs  lib.rs  poison.rs  types.rs
crates/rust-test-input/: Cargo.toml  README.md
crates/rust-test-input/src/: lib.rs
docs/: ALU Design.md  CONTRIBUTING.md  Getting LLVM IR Output.md  LLVM IR Generation Features.md  Licensing.md
src/: lib.rs  main.rs
src/error/: llvm_compile.rs  mod.rs
