[package]
name = "ltc-cli"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "The CLI for working with the LLVM to Cairo compilation process."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
ariadne.workspace = true
clap.workspace = true
itertools.workspace = true
tracing.workspace = true

[[bin]]
name = "ltc"         # Named for "LLVM To Cairo"
path = "src/main.rs"
