[package]
name = "hieratika-cli"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "The CLI to allow users to interact with the Hieratika compilation process."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
ariadne.workspace = true
clap.workspace = true
hieratika-compiler.workspace = true
itertools.workspace = true
tracing.workspace = true

[[bin]]
name = "hieratika"
path = "src/main.rs"
