[package]
name = "ltc-compiler"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "A compiler to allow LLVM bytecode to run on the Starknet ecosystem in a provable fashion."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
bimap.workspace = true
chumsky = "0.9.3"
clap.workspace = true
derivative = "2.2.0"
downcast-rs = "1.2.1"
inkwell.workspace = true
itertools.workspace = true
ltc-errors.workspace = true
ltc-flo.workspace = true
ouroboros = "0.18.4"
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
