[package]
name = "ltc-errors"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "The error types used by the LLVM to Cairo project."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
ariadne.workspace = true
thiserror.workspace = true
