[package]
name = "ltc-flir"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "The FlatLowered Intermediate Representation, or FLIR, is a FlatLowered-based IR customized to the needs of the LTC project."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
